src/App.scss
body, * {
  font-family:
          -apple-system,
          BlinkMacSystemFont,
          "Segoe UI",
          "Roboto",
          "Oxygen",
          "Ubuntu",
          "Cantarell",
          "Fira Sans",
          "Droid Sans",
          "Helvetica Neue",
          sans-serif;
}

.container {
  margin: 12px auto;
  max-width: 800px;
}

.carousel-wrapper {
  overflow: hidden;
  width: 100%;

  & * {
    box-sizing: border-box;
  }
}

.carousel {
  transform-style: preserve-3d;
  &__item {
    opacity: 1;
    position: absolute;
    top: 0;
    width: 100%;
    margin: auto;
    z-index: 100;
    transition: transform 0.5s, opacity 0.5s, z-index 0.5s;

    &-back {
      z-index: 1;
      position: relative;
      width: 100%;
      opacity: 0;
    }

    &-active {
      opacity: 1;
      position: absolute;
      z-index: 900;
      transform: translateX(-100%); // Move 'prev' item to the left
    }

    &-prev, &-next {
      z-index: 800;
    }

    &-hide {
      z-index: 799;
    }

    &-prev {
      transform: translateX(-200%); // Move 'prev' item to the left
    }

    &-next {
      transform: translateX(0%); // Move 'next' item to the right
    }
  }
}

